<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_marginTop="10dp"
        android:id="@+id/myCard"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:id="@+id/rec_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rec_phone"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/student_phone"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/rec_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/student_email"
            android:textSize="10sp"
            android:textStyle="italic" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>