<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="wrap_content"
    tools:context=".activities.ContactRecyclerView">

    <!--   <include layout="@layout/layout_actionbar"/>-->

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:elevation="@dimen/cardview_default_elevation"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_name"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/Phone"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/student_phone"
                android:textSize="10sp" />
            <TextView
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/student_email"
                android:textSize="10sp"
                android:textStyle="italic" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>