<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="15dp"
    android:layout_height="match_parent">

    <TextView
       android:id="@+id/callerId"
        android:text="F"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/caller_id"/>

   <RelativeLayout
    android:paddingLeft="20dp"
    android:layout_toRightOf="@+id/callerId"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

 <TextView
     android:layout_below="@id/Name"
     android:id="@+id/Name"
     android:textStyle="bold"
     android:textSize="20sp"
     android:text="@string/student_name"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/Phone"
        android:layout_below="@id/Name"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:text="@string/student_phone"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/Email"
        android:layout_marginTop="5dp"
        android:layout_below="@id/Phone"
        android:textSize="15sp"
        android:textStyle="italic"
        android:text="@string/student_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

<!--    <ImageView
        android:id="@+id/dial"
        android:background="@drawable/ic_phone_black2_24dp"
        android:layout_width="wrap_content"
        android:focusable="false"
        android:clickable="false"
        android:layout_height="wrap_content"/>-->

</RelativeLayout>
</RelativeLayout>